# rolling-shutter

./: .gitignore  CMakeLists.txt  README.md  cairo-stream.sh  drawing.c  predator.c  predator_video.sh  predator_write.sh  rolling.c  rolling_video.sh  rolling_webcam.sh  rolling_write.sh  simple_rolling_write.sh  simple_strip.sh  simple_strip_write.sh  simple_strip_write_sin.sh  slide_video.sh  slide_write.sh  sliding.c  start_video.sh  start_webcam.sh  strip.c  strip_video.sh  strip_webcam.sh  strip_write.sh
